Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72457

Text item with rich text does not render html table background properly

    XMLWordPrintable

Details

    • All
    • 634b59f187c8697f03a606cbacb5f0a69650ea7c (qt/qtdeclarative/5.12)

    Description

      When trying to render a quite complex html table the background of empty cell is not rendered properly, only text part of the cell background is rendered.

       

      See the rendering in a current web browser capture (CaptureHTMLBrowser.PNG) and using QML TextArea (CaptureTextArea.PNG) to see the difference between waited and got rendering.

       

      The Zip file contains a small project to show how we used the Text item to display html.

       

       

      Attachments

        1. BugReport.zip
          16 kB
          Nicolas Deherly
        2. CaptureHTMLBrowser.PNG
          105 kB
          Nicolas Deherly
        3. CaptureTextArea.PNG
          144 kB
          Nicolas Deherly
        4. qtbug72457.zip
          6 kB
          Andy Shaw
        5. qtbug72457-fixed.png
          687 kB
          Shawn Rutledge
        6. qtbug72457-simplest.png
          16 kB
          Shawn Rutledge
        7. simplest.html
          0.2 kB
          Shawn Rutledge

        Issue Links

          For Gerrit Dashboard: QTBUG-72457
          # Subject Branch Project Status CR V

          Activity

            People

              srutledg Shawn Rutledge
              nicolasdcgi Nicolas Deherly
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes